# Noesis

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  NOESISV1.md  NOESISV2.md  NOESISV3.md  PROGRESS.md  README.md  SPRINT2REPORT.md  SPRINT3REPORT.md  STRUCTURE.md  architecture-plan-v2.md  architecturev2.md  docker-compose.yml  noesis.service
docs/: mcp-tools.md
docs/adr/: 001-openapi-approach.md  002-sse-vs-websocket.md  003-plugin-manifest-format.md
examples/: basic_scenario.rs
hermes_integration/: __init__.py  noesis_client.py  noesis_plugin.py  plugin.yaml
mcp_server/: __init__.py  client.py  server.py
plugins/: README.md
scripts/: cascade_test.sh  test.sh
src/: lib.rs  main.rs
src/core/: kernel.rs  mod.rs  registry.rs
src/docs/: mod.rs
src/engines/: mod.rs
src/engines/graph/: extraction.rs  mod.rs  types.rs
src/engines/llm/: chain.rs  client.rs  extract.rs  (+4 more)
src/eventbus/: bus.rs  catalog.rs  cloud_event.rs  mod.rs  signal.rs  subscription.rs
src/field/: context.rs  field.rs  mod.rs
src/field_runtime/: context.rs  dispatcher.rs  field.rs  mod.rs  processor_registry.rs  runtime.rs  snapshot.rs  transactions.rs
src/fields/: awareness.rs  executive.rs  graph.rs  identity.rs  memory.rs  mod.rs  simulation.rs
src/interfaces/: cli.rs  mcp.rs  mcp_handler.rs  mod.rs  rest.rs
src/kernel/: beat_coordinator.rs  bus.rs  capabilities.rs  catalog.rs  cloud_event.rs  kernel.rs  lifecycle.rs  mod.rs  plugin.rs  registry.rs  runtime.rs  scheduler.rs  signal.rs  state.rs
src/metrics/: metrics.rs
src/plugin/: loader.rs  manifest.rs
src/processor/: lifecycle.rs  mod.rs  processor.rs
src/processors/: attention.rs  belief.rs  consolidation.rs  curiosity.rs  episode.rs  extraction.rs  goal.rs  identity.rs  mod.rs  narrative.rs  reflection.rs  resolution.rs
src/scheduler/: scheduler.rs
src/signals/: agency.rs  awareness.rs  executive.rs  graph.rs  identity.rs  memory.rs  mod.rs  reasoning.rs
src/storage/: event_store.rs  memory_store.rs  mod.rs  store.rs
src/tui/: api.rs  app.rs  colors.rs  mod.rs  ui.rs  worker.rs
tests/: cascade_test.rs  e2e_test.rs  field_action_test.rs  field_agency_test.rs  field_awareness_test.rs  field_identity_test.rs  field_integration_test.rs  field_memory_test.rs  interface_test.rs  plugin_integration_test.rs  storage_postgres_test.rs  storage_redis_test.rs
(+153 files in other folders)
