[package]
name = "noesis"
version = "0.1.0"
edition = "2021"
description = "A decentralized cognitive architecture — emergent intelligence through recursive signal propagation"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"], optional = true }
clap = { version = "4", features = ["derive"] }
libloading = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"], optional = true }
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
