[package]
name = "noesis"
version = "0.1.0"
edition = "2021"
description = "A decentralized cognitive architecture — emergent intelligence through recursive signal propagation"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
libloading = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ratatui = { version = "0.29" }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
regex = "1"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"], optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }

[features]
default = ["postgres-redis"]
postgres-redis = ["dep:redis", "dep:tokio-postgres", "dep:deadpool-postgres"]
